--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -21,8 +21,8 @@ jobs:
           java-version: 17
       - name: Install Gradle dependencies
         run: |
-          ./gradlew build
+          ../../gradlew build
       - name: Test with gradle Junit
         run: |
-         ./gradlew test
+         ../../gradlew test
 
