--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -15,15 +15,19 @@ jobs:
         java-version: [17]
 
     steps:
+      - uses: actions/checkout@v3
       - name: Set up Java
-        uses: actions/setup-java@v1
+        uses: actions/setup-java@v3
         with:
           java-version: 17
-      - run: echo $(basename $(pwd))
-      - name: Install Gradle dependencies
-        run: |
-          ../../gradlew build
-      - name: Test with gradle Junit
-        run: |
-         ../../gradlew test
+      - name: Validate Gradle wrapper
+        uses: gradle/wrapper-validation-action@e6e38bacfdf1a337459f332974bb2327a31aaf4b
+      - name: Build with Gradle
+        uses: gradle/gradle-build-action@0d13054264b0bb894ded474f08ebb30921341cee
+        with:
+          arguments: build
+      - name: Run the Gradle package task
+        uses: gradle/gradle-build-action@0d13054264b0bb894ded474f08ebb30921341cee
+        with:
+          arguments: -b ci.gradle package
 
