--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -30,4 +30,8 @@ jobs:
       - name: Test with gradle Junit
         run: |
           ./gradlew test
-
+      - name: Publish Test Results
+        uses: EnricoMi/publish-unit-test-result-action@v1
+        if: always()
+        with:
+          junit_files: "test-results/**/*.xml"
