--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -30,8 +30,8 @@ jobs:
       - name: Test with gradle Junit
         run: |
           ./gradlew test
-      - name: Publish Test Results
-        uses: EnricoMi/publish-unit-test-result-action@v1
-        if: always()
+      - name: Publish Test Report
+        uses: mikepenz/action-junit-report@v3
+        if: always() # always run even if the previous step fails
         with:
-          junit_files: "test-results/**/*.xml"
+          report_paths: '**/build/test-results/test/TEST-*.xml'
