--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -31,8 +31,7 @@ jobs:
         run: |
           ./gradlew test
       - name: Publish Test Report
-        uses: mikepenz/action-junit-report@v3
-        if: always() # always run even if the previous step fails
-        with:
-          report_paths: '**/build/test-results/test/TEST-*.xml'
-          token: ${{ secrets.GITHUB_TOKEN }}
+        uses: phoenix-actions/test-reporting@v8
+#         if: always() # always run even if the previous step fails
+#         with:
+#           report_paths: '**/build/test-results/test/TEST-*.xml'
