--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -32,6 +32,5 @@ jobs:
           ./gradlew test
       - name: Publish Test Report
         uses: phoenix-actions/test-reporting@v8
-#         if: always() # always run even if the previous step fails
-#         with:
-#           report_paths: '**/build/test-results/test/TEST-*.xml'
+        with:
+          name: '**/build/test-results/test/TEST-*.xml'
