--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -35,3 +35,4 @@ jobs:
         with:
           name: Test Report
           path: '**/build/test-results/test/TEST-*.xml'
+          reporter: java-junit
