--- a/build.gradle
+++ b/build.gradle
@@ -28,19 +28,13 @@ tasks.named('test') {
 }
 
 jacoco {
-    toolVersion = "0.8.7"
-    reportsDirectory = layout.buildDirectory.dir('customJacocoReportDir')
+	toolVersion = "0.8.5"
+	reportsDir = file("$buildDir/jacoco")
 }
 
 test {
-    finalizedBy jacocoTestReport // report is always generated after tests run
+	finalizedBy jacocoTestReport
 }
-
 jacocoTestReport {
-    dependsOn test
-    reports {
-        xml.required = false
-        csv.required = false
-        html.outputLocation = layout.buildDirectory.dir('jacocoHtml')
-    }
+	dependsOn test
 }
