--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -43,5 +43,5 @@ jobs:
       - name: JaCoCo Report
         uses: Madrapps/jacoco-report@v1.2
         with:
-          paths: ${{ github.workspace }}/build/jacoco/test/html/index.html
+          paths: ${{ github.workspace }}/build/jacoco/test/jacocoTestReport.xml
           token: ${{ github.token }}
