--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -43,6 +43,6 @@ jobs:
         uses: phoenix-actions/test-reporting@v8
         with:
           name: Test Report
-          path: '**/build/test-results/test/TEST-*.xml, **/build/jacoco/test/jacocoTestReport.xml'
+          path: '**/build/test-results/test/TEST-*.xml ${{ github.workspace }}/build/jacoco/test/jacocoTestReport.xml'
           reporter: java-junit 
-      
+          
