--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -30,16 +30,20 @@ jobs:
       - name: Test with gradle Junit
         run: |
           ./gradlew test
+          
       - name: Run Coverage
         run: |
           chmod +x gradlew
           ./gradlew jacocoTestReport 
+          
       - name: Upload Report
         uses: 'actions/upload-artifact@v2'
         with:
           name: report.xml
           path: ${{ github.workspace }}/build/jacoco/test/jacocoTestReport.xml
+          
       - name: JaCoCo Report
+        id: jacoco
         uses: Madrapps/jacoco-report@v1.2
         with:
           paths: ${{ github.workspace }}/build/jacoco/test/jacocoTestReport.xml
@@ -48,6 +52,6 @@ jobs:
         uses: phoenix-actions/test-reporting@v8
         with:
           name: Test Report
-          path: '**/build/test-results/test/TEST-*.xml'
+          path: '**/build/test-results/test/TEST-*.xml, **/build/jacoco/test/jacocoTestReport.xml'
           reporter: java-junit 
           
