--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -40,18 +40,18 @@ jobs:
         uses: 'actions/upload-artifact@v2'
         with:
           name: report.xml
-          path: ${{ github.workspace }}/build/jacoco/test/jacocoTestReport.xml
+          path: ${{ github.workspace }}/build/jacoco/test/html/index.html
           
       - name: JaCoCo Report
         id: jacoco
         uses: Madrapps/jacoco-report@v1.2
         with:
-          paths: ${{ github.workspace }}/build/jacoco/test/jacocoTestReport.xml
+          paths: ${{ github.workspace }}/build/jacoco/test/html/index.html
           token: ${{ github.token }}
       - name: Publish Test Report
         uses: phoenix-actions/test-reporting@v8
         with:
           name: Test Report
-          path: '**/build/test-results/test/TEST-*.xml, **/build/jacoco/test/jacocoTestReport.xml'
+          path: '**/build/test-results/test/TEST-*.xml'
           reporter: java-junit 
           
