--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -39,7 +39,7 @@ jobs:
       - name: Upload Report
         uses: 'actions/upload-artifact@v2'
         with:
-          name: report.xml
+          name: test-coverage-report.html
           path: ${{ github.workspace }}/build/jacoco/test/html/index.html
           
       - name: JaCoCo Report
