--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -39,19 +39,19 @@ jobs:
       - name: Upload Report
         uses: 'actions/upload-artifact@v2'
         with:
-          name: report.xml
-          path: ${{ github.workspace }}/build/jacoco/test/jacocoTestReport.xml
+          name: report.html
+          path: ${{ github.workspace }}/build/reports/jacoco/Html/index.html
           
       - name: JaCoCo Report
         id: jacoco
         uses: Madrapps/jacoco-report@v1.2
         with:
-          paths: ${{ github.workspace }}/build/jacoco/test/jacocoTestReport.xml
+          paths: ${{ github.workspace }}/build/reports/jacoco/Html/index.html
           token: ${{ github.token }}
       - name: Publish Test Report
         uses: phoenix-actions/test-reporting@v8
         with:
           name: Test Report
-          path: '**/build/test-results/test/TEST-*.xml, **/build/jacoco/test/jacocoTestReport.xml'
+          path: '**/build/test-results/test/TEST-*.xml, **/build/reports/jacoco/Html/index.html'
           reporter: java-junit 
           
