--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -41,7 +41,7 @@ jobs:
         id: jacoco-report
         uses: Madrapps/jacoco-report@v1.2
         with:
-          paths: ${{ github.workspace }}/build/reports/jacoco/Html/index.html
+          paths: ${{ github.workspace }}/build/reports/jacoco/jacoco.csv
           token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Generate JaCoCo Badge
@@ -66,8 +66,8 @@ jobs:
       - name: Upload Report
         uses: 'actions/upload-artifact@v2'
         with:
-          name: test-coverage-report.html
-          path: ${{ github.workspace }}/build/reports/jacoco/Html/index.html
+          name: test-coverage-report.csv
+          path: ${{ github.workspace }}/build/reports/jacoco/jacoco.csv
 
       - name: Publish Test Report
         uses: phoenix-actions/test-reporting@v8
