--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,11 @@ jacoco {
 	toolVersion = "0.8.7"
 }
 
+pmd {
+	ruleSetFiles = files("pmd.xml")
+	ruleSets = []
+}
+
 test {
 	finalizedBy jacocoTestReport
 	setIgnoreFailures(true)
