--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -55,6 +55,7 @@ jobs:
           generate-summary: true
 
       - name: PMD
+        if: failure()
         uses: pmd/pmd-github-action@v1.2.1
         with:
           rulesets: ./pmd.xml
