--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -59,6 +59,13 @@ jobs:
         with:
           rulesets: ./pmd.xml
 
+      - name: Mutation Annotation Report
+        uses: johanholmerin/mutation-report-action@0.2.0
+        if: ${{ always() }} # Upload even if tests don't pass testing threshold
+        with:
+          repo-token: ${{ secrets.GITHUB_TOKEN }}
+          report-json: './reports/mutation/mutation.json' # Optional, default
+
       - name: Upload PMD Report
         if: failure()
         uses: 'actions/upload-artifact@v2'
