--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -64,7 +64,7 @@ jobs:
         if: ${{ always() }} # Upload even if tests don't pass testing threshold
         with:
           repo-token: ${{ secrets.GITHUB_TOKEN }}
-          report-json: './reports/mutation/mutation.json' # Optional, default
+          "reporters": ["json"]
 
       - name: Upload PMD Report
         if: failure()
@@ -73,12 +73,19 @@ jobs:
           name: pmd-static-analysis-report
           path: ${{ github.workspace }}/build/reports/pmd/main.html
 
-      - name: Upload Report
+      - name: Upload Code Coverage Report
         if: always()
         uses: 'actions/upload-artifact@v2'
         with:
           name: test-coverage-report
           path: ${{ github.workspace }}/build/reports/jacoco/Html
+
+      - name: Upload Mutation Report
+        if: always()
+        uses: 'actions/upload-artifact@v2'
+        with:
+          name: test-coverage-report
+          path: ${{ github.workspace }}/build/reports/pitest/**/index.html
 
       - name: Publish Test Report
         if: always()
