change mutation reporters to html github actions

--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -64,7 +64,7 @@ jobs:
         if: ${{ always() }} # Upload even if tests don't pass testing threshold
         with:
           repo-token: ${{ secrets.GITHUB_TOKEN }}
-          "reporters": ["json"]
+          "reporters": "html"
 
       - name: Upload PMD Report
         if: failure()
