Add mutation testing (#3)
* added PMD static Analysis to github-actions yaml

* added pmd to build.gradle

* upload pmd report artifact

* Pmd static code analysis custom xml config and resolved all current static analysis issues

* Update github-actions.yml

* Update github-actions.yml

* Update github-actions.yml

* Update github-actions.yml

* Update github-actions.yml

* Update github-actions.yml

* added unnecessary import to pmd xml

* remove Unnecessary import from pmd xml

* add piTest mutation testing to build.gradle and Mutation Annotation Report to github action yaml

* added Upload Mutation report to github actions

* change mutation reporters to html github actions

* added run pitest action to github actions

* rename mutation test report

* mutation report path updated

--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,8 @@ plugins {
 	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
 	id 'java'
 	id 'jacoco'
+	id 'pmd'
+	id 'info.solidsoft.pitest' version '1.7.4'
 }
 
 group = 'com.kmd'
@@ -29,6 +31,15 @@ tasks.named('test') {
 
 jacoco {
 	toolVersion = "0.8.7"
+}
+
+pmd {
+	ruleSetFiles = files("pmd.xml")
+	ruleSets = []
+}
+
+pitest {
+	junit5PluginVersion = '0.15'
 }
 
 test {
