--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -36,6 +36,10 @@ jobs:
           chmod +x gradlew
           ./gradlew jacocoTestReport 
 
+      - name: Run Mutation Test
+        if: always()
+        run: |
+          ./gradlew pitest
 
       - name: JaCoCo Report
         if: always()
@@ -54,12 +58,38 @@ jobs:
           generate-branches-badge: true
           generate-summary: true
 
-      - name: Upload Report
+      - name: PMD
+        uses: pmd/pmd-github-action@v1.2.1
+        with:
+          rulesets: ./pmd.xml
+
+#      - name: Mutation Annotation Report
+#        uses: johanholmerin/mutation-report-action@0.2.0
+#        if: ${{ always() }} # Upload even if tests don't pass testing threshold
+#        with:
+#          repo-token: ${{ secrets.GITHUB_TOKEN }}
+#          "reporters": "html"
+
+      - name: Upload PMD Report
+        if: failure()
+        uses: 'actions/upload-artifact@v2'
+        with:
+          name: pmd-static-analysis-report
+          path: ${{ github.workspace }}/build/reports/pmd/main.html
+
+      - name: Upload Code Coverage Report
         if: always()
         uses: 'actions/upload-artifact@v2'
         with:
           name: test-coverage-report
           path: ${{ github.workspace }}/build/reports/jacoco/Html
+
+      - name: Upload Mutation Report
+        if: always()
+        uses: 'actions/upload-artifact@v2'
+        with:
+          name: mutation-test-report
+          path: ${{ github.workspace }}/build/reports/pitest/**
 
       - name: Publish Test Report
         if: always()
@@ -68,3 +98,4 @@ jobs:
           name: Test Report
           path: '**/build/test-results/test/TEST-*.xml'
           reporter: java-junit
+
